--- a/jinho1011/ministagram/photo/templates/photo/photo_list.html
+++ b/jinho1011/ministagram/photo/templates/photo/photo_list.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}
 {% endblock %}
 
 {% block content %}
-<div class="container">
+
+{% comment %} <div class="container">
     <div class="row">
         <div class="col">
             {% for object in object_list %}
@@ -23,5 +25,5 @@
             {% endfor %}
         </div>
     </div>
-</div>
+</div> {% endcomment %}
 {% endblock %}
