--- a/jinho1011/ministagram/layout/base.html
+++ b/jinho1011/ministagram/layout/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <script src="https://kit.fontawesome.com/bf5f0efbc3.js" crossorigin="anonymous"></script>
     <title> {% block title %} {% endblock %} </title>
 </head>
