--- a/jinho1011/ministagram/photo/templates/photo/photo_list.html
+++ b/jinho1011/ministagram/photo/templates/photo/photo_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="photo-list container">
     {% for object in object_list %}
 
     <div class="box">
