--- a/jinho1011/ministagram/static/css/index.css
+++ b/jinho1011/ministagram/static/css/index.css
@@ -16,10 +16,15 @@
     width: 100%;
 }
 
+.photo-comment {
+    border-top: 1px solid #dbdbdb;
+}
+
 .photo-comment a {
     text-decoration: none !important;
     color: #000000 !important;
     font-weight: bold;
+    margin-right: 8px;
 }
 
 .box:last-child {
