Add media-query to index.css

--- a/jinho1011/ministagram/static/css/index.css
+++ b/jinho1011/ministagram/static/css/index.css
@@ -1,32 +1,50 @@
+@media screen and (min-width: 1024px) {
+	.photo-list {
+		max-width: 90% !important;
+	}
+}
+
+@media screen and (min-width: 768px) {
+	.photo-list {
+		max-width: 50% !important;
+	}
+}
+
 .box {
-    padding: 0 !important;
+	padding: 0 !important;
 }
 
 .photo-header,
 .photo-content,
 .photo-comment {
-    padding: 0.5rem 1.25rem;
+	padding: 0.5rem 1.25rem;
 }
 
 .photo-header {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .photo-img img {
-    width: 100%;
+	width: 100%;
 }
 
 .photo-comment {
-    border-top: 1px solid #dbdbdb;
+	border-top: 1px solid #dbdbdb;
 }
 
 .photo-comment a {
-    text-decoration: none !important;
-    color: #000000 !important;
-    font-weight: bold;
-    margin-right: 8px;
+	text-decoration: none !important;
+	color: #000000 !important;
+	font-weight: bold;
+	margin-right: 8px;
+}
+
+.photo-text {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .box:last-child {
-    margin-bottom: 40px;
+	margin-bottom: 40px;
 }
