Implement User Function in base.html

--- a/jinho1011/ministagram/layout/base.html
+++ b/jinho1011/ministagram/layout/base.html
@@ -37,11 +37,25 @@
                         </span>
                     </a>
 
+                    {% if user.is_authenticated %}
                     <a class="navbar-item" href="{% url 'photo:create' %}">
                         <span class="icon">
                             <i class="fas fa-camera-retro"></i>
                         </span>
                     </a>
+                    {% else %}
+                    <a class="navbar-item" href="{% url 'accounts:logout' %}">
+                        <span class="icon">
+                            <i class="fas fa-logout"></i>
+                        </span>
+                    </a>
+                    {% endif %}
+                    <a class="navbar-item" href="{% url 'accounts:login' %}">
+                        <span class=" icon">
+                            <i class="fas fa-login"></i>
+                        </span>
+                    </a>
+
                 </div>
             </div>
         </div>
