--- a/jinho1011/ministagram/layout/base.html
+++ b/jinho1011/ministagram/layout/base.html
@@ -43,19 +43,19 @@
                             <i class="fas fa-camera-retro"></i>
                         </span>
                     </a>
-                    {% else %}
+
                     <a class="navbar-item" href="{% url 'accounts:logout' %}">
                         <span class="icon">
-                            <i class="fas fa-logout"></i>
+                            <i class="fas fa-sign-in-alt"></i>
+                        </span>
+                    </a>
+                    {% else %}
+                    <a class="navbar-item" href="{% url 'accounts:login' %}">
+                        <span class=" icon">
+                            <i class="fas fa-sign-out-alt"></i>
                         </span>
                     </a>
                     {% endif %}
-                    <a class="navbar-item" href="{% url 'accounts:login' %}">
-                        <span class=" icon">
-                            <i class="fas fa-login"></i>
-                        </span>
-                    </a>
-
                 </div>
             </div>
         </div>
