--- a/jinho1011/ministagram/static/css/index.css
+++ b/jinho1011/ministagram/static/css/index.css
@@ -43,6 +43,12 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+	color: #000000 !important;
+	font-size: 16px;
+}
+
+.photo-created {
+	font-size: 12px;
 }
 
 .box:last-child {
