Fix container width in index.cs

--- a/jinho1011/ministagram/static/css/index.css
+++ b/jinho1011/ministagram/static/css/index.css
@@ -1,11 +1,11 @@
 @media screen and (min-width: 1024px) {
-	.photo-list {
+	.container {
 		max-width: 90% !important;
 	}
 }
 
 @media screen and (min-width: 768px) {
-	.photo-list {
+	.container {
 		max-width: 50% !important;
 	}
 }
