--- a/Hongji0611/ministagram/photo/templates/photo/photo_list.html
+++ b/Hongji0611/ministagram/photo/templates/photo/photo_list.html
@@ -4,39 +4,35 @@
 
 {% block content %}
 
-<div class='container'>
-    <div class="row">
-        <div class="col"></div>
-        <div class="col-5">
-            {% for object in object_list %}
+<div class="photo-list container">
+    {% for object in object_list %}
 
-            <div class="card">
-                <div class="card-header">
-                    {{ object.author }}
-                </div>
-                <img src=" {{ object.image.url }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text"> {{ object.text }} </p>
-                </div>
-                <ul class="list-group list-group-flush">
-
-                    <li class="list-group-item">수정일 : {{ object.updated }}</li>
-                    <li class="list-group-item">생성일 : {{ object.created }}</li>
-                </ul>
-                <div class="card-body">
-                    <a href="{% url 'photo:detail' object.id %}" class="card-link">댓글달기</a>
-                    {% if user == object.author %}
-                    <a href="{% url 'photo:update' object.id %}" class="card-link">수정하기</a>
-                    <a href="{% url 'photo:delete' object.id %}" class="card-link">삭제하기</a>
-                    {% endif %}
-                </div>
-
-            </div>
-            {% endfor %}
-
+    <div class="box">
+        <div class="photo-header">
+            {{ object.author }}
         </div>
-
-        <div class="col"></div>
+        <div class="photo-img">
+            <img src="{{ object.image.url }}">
+        </div>
+        <div class="photo-content">
+            <div class="photo-text">
+                {{ object.text }}
+            </div>
+            <div class="photo-created">
+                {{ object.created }}
+            </div>
+        </div>
+        <div class="photo-comment">
+            <div class="list">
+                <a href="{% url 'photo:detail' object.id %}">댓글</a>
+                <a href="{% url 'photo:update' object.id %}">수정</a>
+                <a href="{% url 'photo:delete' object.id %}">삭제</a>
+            </div>
+        </div>
     </div>
+
+    {% endfor %}
+
 </div>
+
 {% endblock %}
