--- a/Hongji0611/ministagram/photo/templates/photo/photo_detail.html
+++ b/Hongji0611/ministagram/photo/templates/photo/photo_detail.html
@@ -3,27 +3,29 @@
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col"></div>
-    <div class="col-12 col-xl-4 col-md-4">
-        <div class="card" style="">
-            <img src="{{ object.image.url }}" class="card-img-top" alt="...">
-            <div class="card-body">
 
-                <h5 class="card-title">{{ object.author }}</h5>
-                <p class="card-text"> {{ object.text }} </p>
+<div class="container">
+    <div class="box">
+        <div class="photo-header">
+            {{ object.author }}
+        </div>
+        <div class="photo-img">
+            <img src="{{ object.image.url }}">
+        </div>
+        <div class="photo-content">
+            <div class="photo-text">
+                {{ object.text }}
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">생성일 : {{ object.created }}</li>
-                <li class="list-group-item">수정일 : {{ object.updated }} </li>
-            </ul>
-            <div class="card-body">
-                <a href="{% url 'photo:update' object.id %}" class="card-link">수정하기</a>
-                <a href="{% url 'photo:delete' object.id %}" class="card-link">삭제하기</a>
+            <div class="photo-created">
+                {{ object.created }}
+            </div>
+        </div>
+        <div class="photo-comment">
+            <div class="list">
+                <a href="{% url 'photo:update' object.id %}">수정</a>
+                <a href="{% url 'photo:delete' object.id %}">삭제</a>
             </div>
         </div>
     </div>
-
-    <div class="col"></div>
 </div>
 {% endblock %}
