--- a/Hongji0611/ministagram/layout/base.html
+++ b/Hongji0611/ministagram/layout/base.html
@@ -94,6 +94,18 @@
 			{% endif %}
 		</div>
 	</nav>
+	<div class = 'container'>
+		{% if messages %}
+		<div class="row">
+			<div class="col-6">
+				{% for message in messages %}
+				<div class="alert alert-{{message.tag}}">{{message}}</div>
+				{% endfor %}
+			</div>
+			<div class="col"> </div>
+		</div>
+	</div>
+		{% endif %}
 
 	{% block content %}
 
