delete and update check

--- a/Hongji0611/ministagram/photo/templates/photo/photo_detail.html
+++ b/Hongji0611/ministagram/photo/templates/photo/photo_detail.html
@@ -23,8 +23,10 @@
         
         <div class="photo-comment">
             <div class="list">
+                {% if user == object.author %}
                 <a href="{% url 'photo:update' object.id %}">수정</a>
                 <a href="{% url 'photo:delete' object.id %}">삭제</a>
+                {% endif %}
             </div>
         </div>
     </div>
