--- a/Hongji0611/ministagram/photo/templates/photo/photo_list.html
+++ b/Hongji0611/ministagram/photo/templates/photo/photo_list.html
@@ -6,36 +6,42 @@
 
 <div class="photo-list container">
     {% for object in object_list %}
-
-    <div class="box">
-        <div class="photo-header">
-            {{ object.author }}
-        </div>
-        <div class="photo-img">
-            <img src="{{ object.image.url }}">
-        </div>
-        <div class="photo-content">
-            <div class="photo-text">
-                {{ object.text }}
-            </div>
-            <div class="photo-created">
-                {{ object.created }}
-            </div>
-        </div>
-        <div class="photo-comment">
-            <div class="list">
-                
-                <a href="{% url 'photo:detail' object.id %}">댓글</a>
-                {% if user == object.author %}
-                <a href="{% url 'photo:update' object.id %}">수정</a>
-                <a href="{% url 'photo:delete' object.id %}">삭제</a>
-                {% endif %}
-            </div>
-        </div>
-    </div>
-
+        {% for user in followees %}
+            {% ifequal object.author user.username %}
+                <div class="box">
+                    <div class="photo-header">
+                        {{ object.author }}
+                    </div>
+                    <div class="photo-img">
+                        <img src="{{ object.image.url }}">
+                    </div>
+                    <div class="photo-content">
+                        <div class="photo-text">
+                            {{ object.text }}
+                        </div>
+                        <div class="photo-created">
+                            {{ object.created }}
+                        </div>
+                    </div>
+                    <div class="photo-comment">
+                        <div class="list">
+                            <a href="{% url 'photo:detail' object.id %}">댓글</a>
+                            {% if user == object.author %}
+                            <a href="{% url 'photo:update' object.id %}">수정</a>
+                            <a href="{% url 'photo:delete' object.id %}">삭제</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            {% endifequal %}
+        {% endfor %}
     {% endfor %}
-
 </div>
+
+<script>
+    {% if followees %}
+
+    {% endif %}
+</script>
 
 {% endblock %}
