--- a/community/layout/base.html
+++ b/community/layout/base.html
@@ -9,6 +9,43 @@
     </head>
 
     <body>
+      {% load static %}
+    <style>
+          .btn-like{
+              display: inline-block;
+              width: 50px;
+              height: 50px;
+              background-position: -100px -400px;
+              overflow:hidden;
+              border:none;
+          }
+          .btn-like.active{
+              display: inline-block;
+              width: 50px;
+              height: 50px;
+              background-position: -50px -400px;
+              text-indent: -9999px;
+              overflow:hidden;
+              border:none;
+          }
+          .btn-favorite{
+              display: inline-block;
+              width: 50px;
+              height: 50px;
+              background-position: -515px -150px;
+              text-indent: -9999px;
+              border:none;
+          }
+          .btn-favorite.active{
+              display: inline-block;
+              width: 50px;
+              height: 50px;
+              background-position: -515px -100px;
+              text-indent: -9999px;
+              border:none;
+          }
+
+    </style>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Instagram</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
