--- a/community/photo/templates/photo/photo_list.html
+++ b/community/photo/templates/photo/photo_list.html
@@ -18,6 +18,13 @@
                       <p class="card-text"> {{ object.text }} </p>
               </div>
               <ul class="list-group list-group-flush">
+                <a href ="{% url 'photo:like' object.id %}" class="float-left btn-like {%if user in object.like.all%} active {%endif%}">Like</a>
+                {% if object.like.all.count %}
+                <span class="float-left">
+                  {{ object.like.all.count }}
+                </span>
+                {% endif %}
+                <a href ="{% url 'photo:favorite' object.id %}" class="float-right btn-favorite {%if user in object.favorite.all%} active {%endif%}">저장</a>
                 <li class="list-group-item">생성일 : {{ object.created }}</li>
                 <li class="list-group-item">수정일 : {{ object.updated }}</li>
               </ul>
